--- a/nbs/nbaDataCleaning.ipynb
+++ b/nbs/nbaDataCleaning.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleaning NBA Team Box Scores Scraped from ESPN.com\n",
+    "# NBA Box Scores: Data Cleaning with Pandas (Part 2 of?)\n",
     "\n",
-    "Using Pandas and Numpy I'll be cleaning the 2018-2019 Regular Season NBA Team Box Score data scraped from ESPN.com. The web scraping code can be found [here](https://github.com/myrastone0/Olivers_Four_Factors_of_Basketball/blob/master/nbs/nbaWebScrape.ipynb) and the CSV file of the raw data can be found [here](https://github.com/myrastone0/Olivers_Four_Factors_of_Basketball/blob/master/data/nba_team_box_scores_2019.csv).\n",
+    "I'll use Pandas to clean the 2018-2019 Regular Season NBA Team Box Score data scraped from ESPN.com. The web scraping code can be found [here](https://github.com/myrastone0/Olivers_Four_Factors_of_Basketball/blob/master/nbs/nbaWebScrape.ipynb) and the CSV file of the raw data can be found [here](https://github.com/myrastone0/Olivers_Four_Factors_of_Basketball/blob/master/data/nba_team_box_scores_2019.csv).\n",
     "\n",
     "\n",
-    "TL/DR: To prepare the data for future data analysis and predictive modeling, I'll be doing the following: \n",
+    "TL/DR: To prepare the data for future data analysis and predictive modeling, I'll be doing the following:\n",
     "1. Drop redundant/unnecessary columns.\n",
     "2. Create new columns for 'shots made' and 'shots attempted' for Field Goals, 3 Pointers, and Free Throws.\n",
     "3. Create boolean columns for game wins and game losses.\n",
@@ -1733,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,7 @@
        "[2458 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2150,7 +2150,7 @@
        "[2458 rows x 12 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2209,22 +2209,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>teamABBR</th>\n",
-       "      <th>teamName</th>\n",
-       "      <th>gameID</th>\n",
-       "      <th>gameDate</th>\n",
-       "      <th>teamPTS</th>\n",
-       "      <th>teamFG</th>\n",
-       "      <th>teamFG%</th>\n",
-       "      <th>team3PT</th>\n",
-       "      <th>team3PT%</th>\n",
-       "      <th>teamFT</th>\n",
-       "      <th>...</th>\n",
-       "      <th>oppt3PTM</th>\n",
-       "      <th>oppt3PTA</th>\n",
-       "      <th>teamFTM</th>\n",
-       "      <th>teamFTA</th>\n",
-       "      <th>opptFTM</th>\n",
        "      <th>opptFTA</th>\n",
        "      <th>gameLoc_@</th>\n",
        "      <th>gameLoc_vs</th>\n",
@@ -2235,22 +2219,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bos</td>\n",
-       "      <td>Boston Celtics</td>\n",
-       "      <td>401070213</td>\n",
-       "      <td>Tue, Oct 16</td>\n",
-       "      <td>105</td>\n",
-       "      <td>42-97</td>\n",
-       "      <td>43.3</td>\n",
-       "      <td>11-37</td>\n",
-       "      <td>29.7</td>\n",
-       "      <td>10-14</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>26</td>\n",
-       "      <td>10</td>\n",
-       "      <td>14</td>\n",
-       "      <td>14</td>\n",
        "      <td>23</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -2259,22 +2227,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bos</td>\n",
-       "      <td>Boston Celtics</td>\n",
-       "      <td>401070219</td>\n",
-       "      <td>Fri, Oct 19</td>\n",
-       "      <td>101</td>\n",
-       "      <td>40-99</td>\n",
-       "      <td>40.4</td>\n",
-       "      <td>14-36</td>\n",
-       "      <td>38.9</td>\n",
-       "      <td>7-10</td>\n",
-       "      <td>...</td>\n",
-       "      <td>13</td>\n",
-       "      <td>35</td>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "      <td>14</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2283,22 +2235,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>bos</td>\n",
-       "      <td>Boston Celtics</td>\n",
-       "      <td>401070711</td>\n",
-       "      <td>Sat, Oct 20</td>\n",
-       "      <td>103</td>\n",
-       "      <td>33-82</td>\n",
-       "      <td>40.2</td>\n",
-       "      <td>9-25</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>28-33</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>35</td>\n",
-       "      <td>28</td>\n",
-       "      <td>33</td>\n",
-       "      <td>17</td>\n",
        "      <td>27</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2307,22 +2243,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>bos</td>\n",
-       "      <td>Boston Celtics</td>\n",
-       "      <td>401070721</td>\n",
-       "      <td>Mon, Oct 22</td>\n",
-       "      <td>90</td>\n",
-       "      <td>37-91</td>\n",
-       "      <td>40.7</td>\n",
-       "      <td>9-40</td>\n",
-       "      <td>22.5</td>\n",
-       "      <td>7-9</td>\n",
-       "      <td>...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>35</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>7</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -2331,22 +2251,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>bos</td>\n",
-       "      <td>Boston Celtics</td>\n",
-       "      <td>401070746</td>\n",
-       "      <td>Thu, Oct 25</td>\n",
-       "      <td>101</td>\n",
-       "      <td>33-86</td>\n",
-       "      <td>38.4</td>\n",
-       "      <td>11-32</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>24-33</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>28</td>\n",
-       "      <td>24</td>\n",
-       "      <td>33</td>\n",
-       "      <td>14</td>\n",
        "      <td>25</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2360,41 +2264,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2453</th>\n",
-       "      <td>sa</td>\n",
-       "      <td>San Antonio Spurs</td>\n",
-       "      <td>401071835</td>\n",
-       "      <td>Tue, Apr 2</td>\n",
-       "      <td>117</td>\n",
-       "      <td>42-80</td>\n",
-       "      <td>52.5</td>\n",
-       "      <td>14-30</td>\n",
-       "      <td>46.7</td>\n",
-       "      <td>19-22</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>34</td>\n",
-       "      <td>19</td>\n",
-       "      <td>22</td>\n",
-       "      <td>13</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -2403,22 +2275,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2454</th>\n",
-       "      <td>sa</td>\n",
-       "      <td>San Antonio Spurs</td>\n",
-       "      <td>401071846</td>\n",
-       "      <td>Wed, Apr 3</td>\n",
-       "      <td>85</td>\n",
-       "      <td>31-81</td>\n",
-       "      <td>38.3</td>\n",
-       "      <td>5-27</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>18-25</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>33</td>\n",
-       "      <td>18</td>\n",
-       "      <td>25</td>\n",
-       "      <td>7</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2427,22 +2283,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2455</th>\n",
-       "      <td>sa</td>\n",
-       "      <td>San Antonio Spurs</td>\n",
-       "      <td>401071855</td>\n",
-       "      <td>Fri, Apr 5</td>\n",
-       "      <td>129</td>\n",
-       "      <td>51-91</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>10-25</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>17-20</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>32</td>\n",
-       "      <td>17</td>\n",
-       "      <td>20</td>\n",
-       "      <td>19</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2451,22 +2291,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2456</th>\n",
-       "      <td>sa</td>\n",
-       "      <td>San Antonio Spurs</td>\n",
-       "      <td>401071869</td>\n",
-       "      <td>Sun, Apr 7</td>\n",
-       "      <td>112</td>\n",
-       "      <td>43-82</td>\n",
-       "      <td>52.4</td>\n",
-       "      <td>9-22</td>\n",
-       "      <td>40.9</td>\n",
-       "      <td>17-22</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>29</td>\n",
-       "      <td>17</td>\n",
-       "      <td>22</td>\n",
-       "      <td>20</td>\n",
        "      <td>27</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2475,22 +2299,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2457</th>\n",
-       "      <td>sa</td>\n",
-       "      <td>San Antonio Spurs</td>\n",
-       "      <td>401071900</td>\n",
-       "      <td>Wed, Apr 10</td>\n",
-       "      <td>105</td>\n",
-       "      <td>41-88</td>\n",
-       "      <td>46.6</td>\n",
-       "      <td>8-24</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>15-18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11</td>\n",
-       "      <td>37</td>\n",
-       "      <td>15</td>\n",
-       "      <td>18</td>\n",
-       "      <td>9</td>\n",
        "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -2499,72 +2307,33 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2458 rows × 64 columns</p>\n",
+       "<p>2458 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     teamABBR           teamName     gameID     gameDate  teamPTS teamFG  \\\n",
-       "0         bos     Boston Celtics  401070213  Tue, Oct 16      105  42-97   \n",
-       "1         bos     Boston Celtics  401070219  Fri, Oct 19      101  40-99   \n",
-       "2         bos     Boston Celtics  401070711  Sat, Oct 20      103  33-82   \n",
-       "3         bos     Boston Celtics  401070721  Mon, Oct 22       90  37-91   \n",
-       "4         bos     Boston Celtics  401070746  Thu, Oct 25      101  33-86   \n",
-       "...       ...                ...        ...          ...      ...    ...   \n",
-       "2453       sa  San Antonio Spurs  401071835   Tue, Apr 2      117  42-80   \n",
-       "2454       sa  San Antonio Spurs  401071846   Wed, Apr 3       85  31-81   \n",
-       "2455       sa  San Antonio Spurs  401071855   Fri, Apr 5      129  51-91   \n",
-       "2456       sa  San Antonio Spurs  401071869   Sun, Apr 7      112  43-82   \n",
-       "2457       sa  San Antonio Spurs  401071900  Wed, Apr 10      105  41-88   \n",
+       "     opptFTA gameLoc_@ gameLoc_vs teamResult_L teamResult_W\n",
+       "0         23         0          1            0            1\n",
+       "1         19         1          0            1            0\n",
+       "2         27         1          0            0            1\n",
+       "3         10         0          1            1            0\n",
+       "4         25         1          0            0            1\n",
+       "...      ...       ...        ...          ...          ...\n",
+       "2453      20         0          1            0            1\n",
+       "2454      12         1          0            1            0\n",
+       "2455      22         1          0            0            1\n",
+       "2456      27         1          0            0            1\n",
+       "2457      12         0          1            0            1\n",
        "\n",
-       "      teamFG% team3PT  team3PT% teamFT  ...  oppt3PTM  oppt3PTA  teamFTM  \\\n",
-       "0        43.3   11-37      29.7  10-14  ...         5        26       10   \n",
-       "1        40.4   14-36      38.9   7-10  ...        13        35        7   \n",
-       "2        40.2    9-25      36.0  28-33  ...        12        35       28   \n",
-       "3        40.7    9-40      22.5    7-9  ...        10        35        7   \n",
-       "4        38.4   11-32      34.4  24-33  ...         7        28       24   \n",
-       "...       ...     ...       ...    ...  ...       ...       ...      ...   \n",
-       "2453     52.5   14-30      46.7  19-22  ...        12        34       19   \n",
-       "2454     38.3    5-27      18.5  18-25  ...        12        33       18   \n",
-       "2455     56.0   10-25      40.0  17-20  ...         9        32       17   \n",
-       "2456     52.4    9-22      40.9  17-22  ...         8        29       17   \n",
-       "2457     46.6    8-24      33.3  15-18  ...        11        37       15   \n",
-       "\n",
-       "      teamFTA  opptFTM  opptFTA  gameLoc_@  gameLoc_vs  teamResult_L  \\\n",
-       "0          14       14       23          0           1             0   \n",
-       "1          10       14       19          1           0             1   \n",
-       "2          33       17       27          1           0             0   \n",
-       "3           9        7       10          0           1             1   \n",
-       "4          33       14       25          1           0             0   \n",
-       "...       ...      ...      ...        ...         ...           ...   \n",
-       "2453       22       13       20          0           1             0   \n",
-       "2454       25        7       12          1           0             1   \n",
-       "2455       20       19       22          1           0             0   \n",
-       "2456       22       20       27          1           0             0   \n",
-       "2457       18        9       12          0           1             0   \n",
-       "\n",
-       "      teamResult_W  \n",
-       "0                1  \n",
-       "1                0  \n",
-       "2                1  \n",
-       "3                0  \n",
-       "4                1  \n",
-       "...            ...  \n",
-       "2453             1  \n",
-       "2454             0  \n",
-       "2455             1  \n",
-       "2456             1  \n",
-       "2457             1  \n",
-       "\n",
-       "[2458 rows x 64 columns]"
+       "[2458 rows x 5 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.T.tail(5).T"
    ]
   },
   {
@@ -2576,19 +2345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/nba_team_box_scores_'+str(year)+'_cleaned.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
