changed csv save

--- a/nbs/nbaDataCleaning.ipynb
+++ b/nbs/nbaDataCleaning.ipynb
@@ -2349,7 +2349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../data/nba_team_box_scores_'+str(year)+'_cleaned.csv')"
+    "df.to_csv('../data/nba_team_box_scores_'+str(year)+'_cleaned.csv', index = False)"
    ]
   }
  ],
